Add faq, about and new colors

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,9 +1,10 @@
 /* dark: #272727
-grey: #747474
+grey: #BCBABE
 light-red #f56976
 red: #f45b69
 yellow: #FFE400
-green: #14A76C */
+green: #1995AD
+ice: #A1D6E2*/
 
 * {
   box-sizing: border-box;
@@ -30,7 +31,7 @@ body {
 }
 a {
   text-decoration: none;
-  color: #14a76c;
+  color: #1995AD;
   transition: color 0.4s ease-out;
 }
 a:hover {
@@ -96,7 +97,7 @@ h2:before {
 h2:after {
   width: 200px;
   height: calc(24px + 10 * (100vw - 360px) / 1560);
-  background-color: #14a76c;
+  background-color: #1995AD;
   top: 29px;
   left: -54px;
 }
@@ -127,9 +128,9 @@ h2.competitionSection:after {
   text-align: center;
   overflow: hidden;
   border-radius: 8px;
-  border: 1px solid #14a76c;
+  border: 1px solid #1995AD;
 
-  color: #14a76c;
+  color: #1995AD;
 
   transition: background-color 0.4s 0.1s ease-in-out;
 }
@@ -137,7 +138,7 @@ h2.competitionSection:after {
 .btn:hover {
   color: #fff;
   text-decoration: none;
-  background-color: #14a76c;
+  background-color: #1995AD;
 
   transition: box-shadow 0.5s 0.1s ease-out;
 }
