Fix background color of buttons

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -125,6 +125,7 @@ h2:after {
   border: 1px solid var(--green);
 
   color: var(--green);
+  background-color: #fff;
 
   transition: background-color 0.4s 0.1s ease-in-out;
 }
