--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,6 +7,7 @@ green: var(--green)
 ice: #A1D6E2*/
 
 @import '../components/variables.css';
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
 
 * {
   box-sizing: border-box;
